<resources>
    <string name="app_name">Task 2</string>
    <string name="but_text_1">Press to run Activity 1 </string>
    <string name="text">Run</string>
    <string name="but_text_2">Press to run Activity 2</string>
    <string name="but_text_3">Press to run Activity 3</string>
    <string name="hello_text">say something!</string>
    <string name="yes_button">ok</string>
    <string name="press_button">Press me!</string>
    <string name="good">Good! You make it</string>
    <string name="enter_field">Make some text</string>
    <string name="first_text">Up Me!</string>
    <string name="second_text">Ok, now close me!</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello world</string>
    <string name="nav_header_subtitle">St.Petersburg</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="show_progress">Show progress</string>
    <string name="hide_progress">Hide progress</string>
    <string name="add_progress">Add Progress</string>
    <string name="fab_behavior_name">com.example.cur3_ex1.FAB_Hide_on_Scroll</string>
    <string name="big_text">
    </string>
</resources>
